--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,44 +2,28 @@ version: '3'
 services:
  desktop-v1:
   container_name: desktop-v1
-  build: ./Desktop.serv1
+  build: ./Desktop.serv
   restart: always
   ports:
   - "8090:80"
-  networks:
-  - server
   
  desktop-v2:
   container_name: desktop-v2
-  build: ./Desktop.serv2
+  build: ./Desktop.serv
   restart: always
   ports:
   - "8091:80"
-  networks:
-  - server
   
  mobile-v1:
   container_name: mobile-v1
-  build: ./Mobile.serv1
+  build: ./Mobile.serv
   restart: always
   ports:
   - "8092:80"
   
  mobile-v2:
   container_name: mobile-v2
-  build: ./Mobile.serv2
+  build: ./Mobile.serv
   restart: always
   ports:
   - "8093:80"
-  
- desktop-bal:
-  container_name: desktop-bal
-  build: ./Desktop.load
-  restart: always
-  ports:
-  - "8089:80"
-  networks:
-  - server
-
-networks:
-  server: {}  
